// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render summary for multiple expenses 1`] = `
<div>
  <h2>
    You are viewing 
    1
     
    expense
     totalling 
    $30.00
  </h2>
</div>
`;

exports[`Should correctly render summary for one expense 1`] = `
<div>
  <h2>
    You are viewing 
    3
     
    expenses
     totalling 
    $120.00
  </h2>
</div>
`;
